--- a/404.html
+++ b/404.html
@@ -6,15 +6,17 @@
 <meta name=MobileOptimized content="320">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="no-referrer">
+<meta name=description content="Website Description">
 <title>
-404 Page Not Found - My New Hugo Site
+404 Page Not Found - Introduction
 </title>
-<meta property="og:title" content="404 Page not found - My New Hugo Site">
+<meta property="og:title" content="404 Page not found - Introduction">
 <meta property="og:type" content="website">
-<meta property="og:description" content>
+<meta property="og:description" content="Website Description">
 <meta property="og:url" content="https://marsvegetables.github.io/404.html">
-<meta property="og:site_name" content="My New Hugo Site">
-<link rel=stylesheet href=/css/main.min.26071743d4271ad5521f6e5dfc001b715c45c630b49995a1e83327f23be2a062.css integrity="sha256-JgcXQ9QnGtVSH25d/AAbcVxFxjC0mZWh6DMn8jvioGI=" crossorigin=anonymous media=screen>
+<meta property="og:site_name" content="Introduction">
+<link rel="shortcut icon" href=/img/fav.ico>
+<link rel=stylesheet href=/css/main.min.3679995ba0ed4b91edeef430fd34cce1e8b53c123f9993c4861941eee80b46b1.css integrity="sha256-NnmZW6DtS5Ht7vQw/TTM4ei1PBI/mZPEhhlB7ugLRrE=" crossorigin=anonymous media=screen>
 </head>
 <body>
 <section id=top class=section>
@@ -37,12 +39,12 @@
 <hr>
 </div>
 <div class="container markdown top-pad">
-Oops! Either you&rsquo;ve found a bug or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
+Oops! Either you&rsquo;ve found a bug (in which case, <a href=mailto:leisi8848-at-gmail-dot-com>please tell me</a>) or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
 </div>
 <div class=section id=footer>
 <div class="container has-text-centered">
 <span class=footer-text>
-<a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev> and </a> by open source contributors.
+<a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev><i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i></a> by open source contributors.
 </span>
 </div>
 </div>
