--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!doctype html><html lang=en-us>
 <head>
-<meta name=generator content="Hugo 0.89.0">
+<meta name=generator content="Hugo 0.89.1">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="chrome=1">
 <meta name=HandheldFriendly content="True">
 <meta name=MobileOptimized content="320">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="no-referrer">
+<meta name=description content="Website Description">
 <title>
-My New Hugo Site
+Introduction
 </title>
-<link href=/index.xml rel=alternate type=application/rss+xml title="My New Hugo Site">
-<meta property="og:title" content="My New Hugo Site">
+<link href=/index.xml rel=alternate type=application/rss+xml title=Introduction>
+<meta property="og:title" content="Introduction">
 <meta property="og:type" content="website">
-<meta property="og:description" content>
+<meta property="og:description" content="Website Description">
 <meta property="og:url" content="https://marsvegetables.github.io/">
-<meta property="og:site_name" content="My New Hugo Site">
-<link rel=stylesheet href=/css/main.min.26071743d4271ad5521f6e5dfc001b715c45c630b49995a1e83327f23be2a062.css integrity="sha256-JgcXQ9QnGtVSH25d/AAbcVxFxjC0mZWh6DMn8jvioGI=" crossorigin=anonymous media=screen>
+<meta property="og:site_name" content="Introduction">
+<link rel="shortcut icon" href=/img/fav.ico>
+<link rel=stylesheet href=/css/main.min.3679995ba0ed4b91edeef430fd34cce1e8b53c123f9993c4861941eee80b46b1.css integrity="sha256-NnmZW6DtS5Ht7vQw/TTM4ei1PBI/mZPEhhlB7ugLRrE=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href=https://marsvegetables.github.io/styles/owlCarousel.min.b1f26e29c43c61fe8b5a6f225b4ee7c5f969a7b33cfe512706271e07246d93d1.css integrity="sha256-sfJuKcQ8Yf6LWm8iW07nxflpp7M8/lEnBiceByRtk9E=" crossorigin=anonymous media=screen>
 </head>
 <body>
@@ -39,11 +41,12 @@ My New Hugo Site
 <div class=section id=footer>
 <div class="container has-text-centered">
 <span class=footer-text>
-<a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev> and </a> by open source contributors.
+<a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev><i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i></a> by open source contributors.
 </span>
 </div>
 </div>
 <script src=https://marsvegetables.github.io/js/bundle.f1741e9868b2f697e71cf8fccfcc12166540999b3d36f8fb9edd0882ba425d55.js integrity="sha256-8XQemGiy9pfnHPj8z8wSFmVAmZs9Nvj7nt0IgrpCXVU="></script>
 <script src=https://marsvegetables.github.io/js/bundleOwlCarousel.bc6b73f0a36bf19c70c5df8fc352d322988ca2bc40743fb836ee7371d555c28a.js integrity="sha256-vGtz8KNr8Zxwxd+Pw1LTIpiMorxAdD+4Nu5zcdVVwoo="></script>
+<script>function update_localtime(){const a=(new Date).toLocaleTimeString('en-US',{timeZone:'America/Chicago',timeStyle:'short'});document.getElementById('time').innerHTML=a}update_localtime(),setInterval(update_localtime,1e3)</script>
 </body>
 </html>
