deploy: MarsVegetables/MarsVegetables.github.io.src@242d9cfdfa878676719e86c2341f34c794951622

--- a/series/index.html
+++ b/series/index.html
@@ -35,6 +35,7 @@ Series - Si, Lei(斯磊)
 </a>
 <div class=navbar-menu id=navMenu>
 <a class=navbar-item href=/>main</a>
+<a class=navbar-item href=/#contact>Contact</a>
 </div>
 </nav>
 <hr>
