--- a/index.html
+++ b/index.html
@@ -22,6 +22,38 @@ Si, Lei(斯磊)
 <link rel=stylesheet href=https://marsvegetables.github.io/styles/owlCarousel.min.b1f26e29c43c61fe8b5a6f225b4ee7c5f969a7b33cfe512706271e07246d93d1.css integrity="sha256-sfJuKcQ8Yf6LWm8iW07nxflpp7M8/lEnBiceByRtk9E=" crossorigin=anonymous media=screen>
 </head>
 <body>
+<section id=top class="hero is-fullheight">
+<div class=hero-head></div>
+<div class=hero-body>
+<div class="container has-text-centered">
+<h1 class="bold-title fade-in one">
+Hi, I am Si, Lei (斯磊)
+</h1>
+<div class="subtitle is-3 fade-in two">
+<p>A PhD student at University of Houston</p>
+<p>This website is under construction</p>
+</div>
+<div class="fade-in three">
+<div class=social-icons>
+<a href=https://twitter.com/>
+<i class="fab fab fa-twitter"></i>
+</a>
+<a href=https://facebook.com/>
+<i class="fab fab fa-facebook-f"></i>
+</a>
+<a href=https://linkedin.com/>
+<i class="fab fab fa-linkedin-in"></i>
+</a>
+<a href=mailto:youremail@email.com>
+<i class="fas fab fa-paper-plane"></i>
+</a>
+<a href=https://mastodon.social/ rel=me>
+<i class="fab fab fa-mastodon"></i>
+</a>
+</div>
+</div>
+</div>
+</div>
 <div class="hero-foot fade-in three">
 <div class=container>
 <hr>
@@ -32,12 +64,49 @@ Si, Lei(斯磊)
 <span aria-hidden=true></span>
 </a>
 <div class="navbar-menu has-content-centered" id=navMenu>
+<a class=navbar-item href=#contact>Contact</a>
 </div>
 </nav>
 <hr>
 </div>
 </div>
 </section>
+<div class=section id=contact>
+<div class="container has-text-centered">
+<h2 class="title is-2">Contact</h2>
+<div class=markdown>
+</div>
+<p>My current local time is <span id=time></span>.</p>
+<h3 class="subtitle is-3 has-text-centered top-pad">
+<a href=mailto:leisi8848-at-gmail-dot-com>leisi8848-at-gmail-dot-com</a>
+</h3>
+<div class=social-icons>
+<a href=https://twitter.com/>
+<i class="fab fab fa-twitter"></i>
+</a>
+<a href=https://facebook.com/>
+<i class="fab fab fa-facebook-f"></i>
+</a>
+<a href=https://linkedin.com/>
+<i class="fab fab fa-linkedin-in"></i>
+</a>
+<a href=mailto:youremail@email.com>
+<i class="fas fab fa-paper-plane"></i>
+</a>
+<a href=https://mastodon.social/ rel=me>
+<i class="fab fab fa-mastodon"></i>
+</a>
+</div>
+</div>
+<div class="container has-text-centered top-pad">
+<a href=#top>
+<i class="fa fa-arrow-up"></i>
+</a>
+</div>
+</div>
+<div class=container>
+<hr>
+</div>
 <div class=section id=footer>
 <div class="container has-text-centered">
 <span class=footer-text>
