--- a/project/hqview/index.html
+++ b/project/hqview/index.html
@@ -8,12 +8,12 @@
 <meta name=referrer content="no-referrer">
 <meta name=description content="Personal Webpage on github.io">
 <title>
-404 Page Not Found - Si, Lei(斯磊)
+Hqview - Si, Lei(斯磊)
 </title>
-<meta property="og:title" content="404 Page not found - Si, Lei(斯磊)">
+<meta property="og:title" content="HQView - Si, Lei(斯磊)">
 <meta property="og:type" content="website">
 <meta property="og:description" content="Personal Webpage on github.io">
-<meta property="og:url" content="https://marsvegetables.github.io/404.html">
+<meta property="og:url" content="https://marsvegetables.github.io/project/hqview/">
 <meta property="og:site_name" content="Si, Lei(斯磊)">
 <link rel="shortcut icon" href=/img/fav.ico>
 <link rel=stylesheet href=/css/main.min.3679995ba0ed4b91edeef430fd34cce1e8b53c123f9993c4861941eee80b46b1.css integrity="sha256-NnmZW6DtS5Ht7vQw/TTM4ei1PBI/mZPEhhlB7ugLRrE=" crossorigin=anonymous media=screen>
@@ -21,7 +21,7 @@
 <body>
 <section id=top class=section>
 <div class="container hero fade-in one">
-<h1 class="bold-title is-1">404</h1>
+<h1 class="bold-title is-1">HQView</h1>
 </div>
 <div class="section fade-in two">
 <div class=container>
@@ -40,7 +40,17 @@
 <hr>
 </div>
 <div class="container markdown top-pad">
-Oops! Either you&rsquo;ve found a bug (in which case, <a href=mailto:leisi8848-at-gmail-dot-com>please tell me</a>) or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
+</div>
+<div class=container>
+<hr>
+</div>
+<div class="container has-text-centered top-pad">
+<a href=#top>
+<i class="fa fa-arrow-up"></i>
+</a>
+</div>
+<div class=container>
+<hr>
 </div>
 <div class=section id=footer>
 <div class="container has-text-centered">
