deploy: MarsVegetables/MarsVegetables.github.io.src@e674e086a9b5b82df7d082816bab3d21509666bb

--- a/index.html
+++ b/index.html
@@ -1,121 +1,16 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta name=generator content="Hugo 0.89.4">
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="chrome=1">
-<meta name=HandheldFriendly content="True">
-<meta name=MobileOptimized content="320">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=referrer content="no-referrer">
-<meta name=description content="Personal Webpage on github.io">
-<title>
-Si, Lei(斯磊)
-</title>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Si, Lei(斯磊)">
-<meta property="og:title" content="Si, Lei(斯磊)">
-<meta property="og:type" content="website">
-<meta property="og:description" content="Personal Webpage on github.io">
-<meta property="og:url" content="https://marsvegetables.github.io/">
-<meta property="og:site_name" content="Si, Lei(斯磊)">
-<link rel="shortcut icon" href=/img/fav.ico>
-<link rel=stylesheet href=/css/main.min.3679995ba0ed4b91edeef430fd34cce1e8b53c123f9993c4861941eee80b46b1.css integrity="sha256-NnmZW6DtS5Ht7vQw/TTM4ei1PBI/mZPEhhlB7ugLRrE=" crossorigin=anonymous media=screen>
-<link rel=stylesheet href=https://marsvegetables.github.io/styles/owlCarousel.min.b1f26e29c43c61fe8b5a6f225b4ee7c5f969a7b33cfe512706271e07246d93d1.css integrity="sha256-sfJuKcQ8Yf6LWm8iW07nxflpp7M8/lEnBiceByRtk9E=" crossorigin=anonymous media=screen>
-</head>
-<body>
-<section id=top class="hero is-fullheight">
-<div class=hero-head></div>
-<div class=hero-body>
-<div class="container has-text-centered">
-<h1 class="bold-title fade-in one">
-Hi, I am Si, Lei (斯磊)
-</h1>
-<div class="subtitle is-3 fade-in two">
-<p>A PhD student at University of Houston</p>
-<p>This website is under construction</p>
-</div>
-<div class="fade-in three">
-<div class=social-icons>
-<a href=https://twitter.com/>
-<i class="fab fab fa-twitter"></i>
-</a>
-<a href=https://facebook.com/>
-<i class="fab fab fa-facebook-f"></i>
-</a>
-<a href=https://linkedin.com/>
-<i class="fab fab fa-linkedin-in"></i>
-</a>
-<a href=mailto:youremail@email.com>
-<i class="fas fab fa-paper-plane"></i>
-</a>
-<a href=https://mastodon.social/ rel=me>
-<i class="fab fab fa-mastodon"></i>
-</a>
-</div>
-</div>
-</div>
-</div>
-<div class="hero-foot fade-in three">
-<div class=container>
-<hr>
-<nav class=navbar role=navigation aria-label="main navigation">
-<a role=button class=navbar-burger data-target=navMenu aria-label=menu aria-expanded=false>
+<!doctype html><html lang=en-us><head><meta name=generator content="Hugo 0.104.3"><meta charset=utf-8><meta http-equiv=x-ua-compatible content="chrome=1"><meta name=HandheldFriendly content="True"><meta name=MobileOptimized content="320"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=referrer content="no-referrer"><meta name=description content="Personal Webpage on github.io"><title>Si, Lei(斯磊)</title><link href=/index.xml rel=alternate type=application/rss+xml title="Si, Lei(斯磊)"><meta property="og:title" content="Si, Lei(斯磊)"><meta property="og:type" content="website"><meta property="og:description" content="Personal Webpage on github.io"><meta property="og:url" content="https://marsvegetables.github.io/"><meta property="og:site_name" content="Si, Lei(斯磊)"><link rel="shortcut icon" href=/img/fav.ico><link rel=stylesheet href=/css/main.min.3679995ba0ed4b91edeef430fd34cce1e8b53c123f9993c4861941eee80b46b1.css integrity="sha256-NnmZW6DtS5Ht7vQw/TTM4ei1PBI/mZPEhhlB7ugLRrE=" crossorigin=anonymous media=screen><link rel=stylesheet href=https://marsvegetables.github.io/styles/owlCarousel.min.b1f26e29c43c61fe8b5a6f225b4ee7c5f969a7b33cfe512706271e07246d93d1.css integrity="sha256-sfJuKcQ8Yf6LWm8iW07nxflpp7M8/lEnBiceByRtk9E=" crossorigin=anonymous media=screen></head><body><section id=top class="hero is-fullheight"><div class=hero-head></div><div class=hero-body><div class="container has-text-centered"><h1 class="bold-title fade-in one">Hi, I am Si, Lei (斯磊)</h1><div class="subtitle is-3 fade-in two"><p>A PhD student at University of Houston</p><p>This website is under construction</p></div><div class="fade-in three"><div class=social-icons><a href=https://twitter.com/><i class="fab fab fa-twitter"></i></a>
+<a href=https://facebook.com/><i class="fab fab fa-facebook-f"></i></a>
+<a href=https://linkedin.com/><i class="fab fab fa-linkedin-in"></i></a>
+<a href=mailto:youremail@email.com><i class="fas fab fa-paper-plane"></i></a>
+<a href=https://mastodon.social/ rel=me><i class="fab fab fa-mastodon"></i></a></div></div></div></div><div class="hero-foot fade-in three"><div class=container><hr><nav class=navbar role=navigation aria-label="main navigation"><a role=button class=navbar-burger data-target=navMenu aria-label=menu aria-expanded=false><span aria-hidden=true></span>
 <span aria-hidden=true></span>
-<span aria-hidden=true></span>
-<span aria-hidden=true></span>
-</a>
-<div class="navbar-menu has-content-centered" id=navMenu>
-<a class=navbar-item href=#contact>Contact</a>
-</div>
-</nav>
-<hr>
-</div>
-</div>
-</section>
-<div class=section id=contact>
-<div class="container has-text-centered">
-<h2 class="title is-2">Contact</h2>
-<div class=markdown>
-</div>
-<p>My current local time is <span id=time></span>.</p>
-<h3 class="subtitle is-3 has-text-centered top-pad">
-<a href=mailto:leisi8848-at-gmail-dot-com>leisi8848-at-gmail-dot-com</a>
-</h3>
-<div class=social-icons>
-<a href=https://twitter.com/>
-<i class="fab fab fa-twitter"></i>
-</a>
-<a href=https://facebook.com/>
-<i class="fab fab fa-facebook-f"></i>
-</a>
-<a href=https://linkedin.com/>
-<i class="fab fab fa-linkedin-in"></i>
-</a>
-<a href=mailto:youremail@email.com>
-<i class="fas fab fa-paper-plane"></i>
-</a>
-<a href=https://mastodon.social/ rel=me>
-<i class="fab fab fa-mastodon"></i>
-</a>
-</div>
-</div>
-<div class="container has-text-centered top-pad">
-<a href=#top>
-<i class="fa fa-arrow-up"></i>
-</a>
-</div>
-</div>
-<div class=container>
-<hr>
-</div>
-<div class=section id=footer>
-<div class="container has-text-centered">
-<span class=footer-text>
-<a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev><i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i></a> by open source contributors.
-</span>
-</div>
-</div>
-<script src=https://marsvegetables.github.io/js/bundle.f1741e9868b2f697e71cf8fccfcc12166540999b3d36f8fb9edd0882ba425d55.js integrity="sha256-8XQemGiy9pfnHPj8z8wSFmVAmZs9Nvj7nt0IgrpCXVU="></script>
+<span aria-hidden=true></span></a><div class="navbar-menu has-content-centered" id=navMenu><a class=navbar-item href=#About></a>
+<a class=navbar-item href=#contact>Contact</a></div></nav><hr></div></div></section><div class=section id=About><div class=container><h2 class="title is-2 has-text-centered"></h2><div class="markdown has-text-centered"><hr><h2 id=weight-8 class=anchor-link><a href=#weight-8>title: &ldquo;About&rdquo;
+image: &ldquo;profile.jpg&rdquo;
+weight: 8</a></h2><p>This is <strong>Introduction</strong>, a minimalist website theme made for <a href=https://gohugo.io>Hugo</a>.</p><h3 id=features class=anchor-link><a href=#features>Features</a></h3><ul><li>Responsive display on any size screen</li><li>Light and Dark themes right out of the box</li><li>Multilingual - supports side-by-side content in multiple languages</li><li>Any number of custom index page sections from Markdown files</li><li><em>Projects</em> section with any number of projects: highly configurable as a photo gallery, modals, or external links</li><li><em>Blog</em> section with optional <em>Latest Post</em>, on the main page or as a separate section</li><li>Styled Markdown throughout with support for Hugo&rsquo;s syntax highlighting</li></ul></div></div><div class="container has-text-centered top-pad"><a href=#top><i class="fa fa-arrow-up"></i></a></div></div><div class=container><hr></div><div class=section id=contact><div class="container has-text-centered"><h2 class="title is-2">Contact</h2><div class=markdown></div><p>My current local time is <span id=time></span>.</p><h3 class="subtitle is-3 has-text-centered top-pad"><a href=mailto:leisi8848-at-gmail-dot-com>leisi8848-at-gmail-dot-com</a></h3><div class=social-icons><a href=https://twitter.com/><i class="fab fab fa-twitter"></i></a>
+<a href=https://facebook.com/><i class="fab fab fa-facebook-f"></i></a>
+<a href=https://linkedin.com/><i class="fab fab fa-linkedin-in"></i></a>
+<a href=mailto:youremail@email.com><i class="fas fab fa-paper-plane"></i></a>
+<a href=https://mastodon.social/ rel=me><i class="fab fab fa-mastodon"></i></a></div></div><div class="container has-text-centered top-pad"><a href=#top><i class="fa fa-arrow-up"></i></a></div></div><div class=container><hr></div><div class=section id=footer><div class="container has-text-centered"><span class=footer-text><a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev><i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i></a> by open source contributors.</span></div></div><script src=https://marsvegetables.github.io/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
 <script src=https://marsvegetables.github.io/js/bundleOwlCarousel.bc6b73f0a36bf19c70c5df8fc352d322988ca2bc40743fb836ee7371d555c28a.js integrity="sha256-vGtz8KNr8Zxwxd+Pw1LTIpiMorxAdD+4Nu5zcdVVwoo="></script>
-<script>function update_localtime(){const a=(new Date).toLocaleTimeString('en-US',{timeZone:'America/Chicago',timeStyle:'short'});document.getElementById('time').innerHTML=a}update_localtime(),setInterval(update_localtime,1e3)</script>
-</body>
-</html>
+<script>function update_localtime(){const e=(new Date).toLocaleTimeString("en-US",{timeZone:"America/Chicago",timeStyle:"short"});document.getElementById("time").innerHTML=e}update_localtime(),setInterval(update_localtime,1e3)</script></body></html>
