--- a/projects/hqview/index.html
+++ b/projects/hqview/index.html
@@ -2,9 +2,8 @@
 <span aria-hidden=true></span>
 <span aria-hidden=true></span></a><div class=navbar-menu id=navMenu><a class=navbar-item href=/>main</a>
 <a class=navbar-item href=/#about>About</a>
-<a class=navbar-item href=/#experience>Publications</a>
-<a class=navbar-item href=/#publications>Publications</a>
-<a class=navbar-item href=/#research>Research Interests</a>
+<a class=navbar-item href=/#experience>Experience</a>
 <a class=navbar-item href=https://marsvegetables.github.io/projects/>Back to Projects</a>
+<a class=navbar-item href=/#publications>Publications</a>
 <a class=navbar-item href=/#contact>Contact</a></div></nav><hr></div><div class="container markdown top-pad"></div><div class=container><hr></div><div class="container has-text-centered top-pad"><a href=#top><i class="fa fa-arrow-up"></i></a></div><div class=container><hr></div><div class=section id=footer><div class="container has-text-centered"><span class=footer-text><a href=https://github.com/victoriadrake/hugo-theme-introduction/><strong>Introduction</strong></a> theme for <a href=http://gohugo.io/>Hugo</a>. Made with <a href=https://victoria.dev><i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i></a> by open source contributors.</span></div></div></div></section><script src=https://marsvegetables.github.io/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
 <script src=https://marsvegetables.github.io/js/bundleOwlCarousel.bc6b73f0a36bf19c70c5df8fc352d322988ca2bc40743fb836ee7371d555c28a.js integrity="sha256-vGtz8KNr8Zxwxd+Pw1LTIpiMorxAdD+4Nu5zcdVVwoo="></script></body></html>
